this plugin is having troubles on ie and FF, so here is a version with a stopgap fix until i work out a better fix

--- a/app/modules/angular-squire/editor.scss
+++ b/app/modules/angular-squire/editor.scss
@@ -255,6 +255,11 @@ $angular-squire-highlight-color: #55ACEE !default;
       outline: none;
     }
   }
+    textarea {
+      width: 100%;
+      border: none;
+      padding: 10px;
+    }
 }
 
 .angular-squire.focus .angular-squire-wrapper .placeholder div {
